some minor bug fixes Preis -> Price , deleted some unnecessary code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div ><img  src="img/pizza-maker-hero.jpg" class="img-fluid"></div>
         </header>
         
-            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <nav class="navbar navbar-expand-md navbar-light bg-white">
                 <div class="container-fluid">
                 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,60 +45,52 @@
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Bruschetta</div>
                                     <div class="template-text">some nice Bruschetta </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/bruschetta.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 9.50$</div>
+                            <div class="template-price">Price: 9.50$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Olive Paste</div>
                                     <div class="template-text">some nice Olive Paste </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/olive paste.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 7$</div>
+                            <div class="template-price">Price: 7$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Tortellini</div>
                                     <div class="template-text">some nice Tortellini </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/tortellini.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 8.60$</div>
+                            <div class="template-price">Price: 8.60$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Antipasti</div>
                                     <div class="template-text">some nice Antipasti </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/antipasti.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 9.20$</div>
+                            <div class="template-price">Price: 9.20$</div>
                         </div>
                     </div>
 
@@ -115,60 +107,52 @@
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Pizza</div>
                                     <div class="template-text">some nice Pizza </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/pizza.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 11.50$</div>
+                            <div class="template-price">Price: 11.50$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Pasta</div>
                                     <div class="template-text">some nice Pasta </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/pasta.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 13.50$</div>
+                            <div class="template-price">Price: 13.50$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Linguini</div>
                                     <div class="template-text">some nice Linguini </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/linguini.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 12$</div>
+                            <div class="template-price">Price: 12$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Lasagne</div>
                                     <div class="template-text">some nice Lasagne </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/lasagne.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 14.20$</div>
+                            <div class="template-price">Price: 14.20$</div>
                         </div>
                     </div>
                 </div>    
@@ -184,61 +168,53 @@
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Cucina</div>
                                     <div class="template-text">some nice Cucina </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/cucina.jpg
                                 " class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 5.50$</div>
+                            <div class="template-price">Price: 5.50$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Tiramisu</div>
                                     <div class="template-text">some nice Tiramisu </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/tiramisu.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 7$</div>
+                            <div class="template-price">Price: 7$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Tartufo</div>
                                     <div class="template-text">some nice Tartufo </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/tartufo.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 5.50$</div>
+                            <div class="template-price">Price: 5.50$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Pannacotta</div>
                                     <div class="template-text">some nice Pannacotta </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/pannacotta.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 11.50$</div>
+                            <div class="template-price">Price: 11.50$</div>
                         </div>
                     </div>
                </div> 
@@ -254,60 +230,52 @@
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Coffee</div>
                                     <div class="template-text">some nice Coffee </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/coffee.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 4.50$</div>
+                            <div class="template-price">Price: 4.50$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Red Wine</div>
                                     <div class="template-text">some nice Red Wine </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/red-wine.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 22.50$</div>
+                            <div class="template-price">Price: 22.50$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Tea</div>
                                     <div class="template-text">some nice Tea </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/tea.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 4.50$</div>
+                            <div class="template-price">Price: 4.50$</div>
                         </div>
                     </div>
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3"> 
                         <div class="template" style="position:relative;">
                             <div class="template-left ">
-                                <div sytle="height:100%;">
                                     <div class="template-header">Smoothie</div>
                                     <div class="template-text">some nice Smoothie </div>  
-                                </div>
                             </div>
                             <div>
                                 <img src="img/smoothie.jpg" class="template-image"  >
                             </div>
-                            <div class="template-price">Preis: 7$</div>
+                            <div class="template-price">Price: 7$</div>
                         </div>
                     </div>
                 </div>   
